# spacy

./: loader.py  parser.py  pyproject.toml  spacy_parser.py  timer.py
