[tool.poetry]
name = "spacy-nlp-test"
version = "0.1.0"
description = ""
authors = ["Nyaaa <1457047+Nyaaa@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "spacy_nlp_test"}]

[tool.poetry.dependencies]
python = "^3.11"
spacy = "^3.5.3"
ru-core-news-sm = {url = "https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.5.0/ru_core_news_sm-3.5.0-py3-none-any.whl"}
scrapy = "^2.9.0"
nltk = "^3.8.1"
textblob = "^0.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
